# devops-container-image-code-generator

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd_pipeline.yml
app/: chain.py  find_middleware_chain.py  generate_container_image_code_chain.py  server.py
app/chains/find_middleware/: __init__.py  find_middleware_chain.py
app/chains/find_middleware_chains/java/apache_maven/: chain.py
app/chains/generate_container_image_code/: __init__.py  generate_container_image_code_chain.py
app/chains/generate_container_image_code_chains/java/apache_maven/spring_boot_version_2.3.0_and_above/: Dockerfile.template  chain.py  entrypoint_script.template
app/chains/generate_container_image_code_chains/spring_boot_version_less_than_2.3.0/: chain.py
app/templates/generate_container_image_code/java/apache_maven/apache_tomcat/: Dockerfile.template
app/templates/generate_container_image_code/java/apache_maven/spring_boot_version_less_than_2.3.0/: Dockerfile.template
app/templates/generate_container_image_code/python/poetry/langserve/: Dockerfile.template  prompt_append.txt
devops_container_image_code_generator/: server.py
devops_container_image_code_generator/chains/: __init__.py  container_image_code_generator_chain.py  container_image_code_generator_chain_application_service.py  container_image_code_generator_chain_for_middleware.py  container_image_code_generator_chain_resource.py
devops_container_image_code_generator/templates/container_image_code/java/apache_maven/spring_boot_version_2.3.0_and_above/: Dockerfile.template
devops_container_image_code_generator/templates/container_image_code/java/apache_maven/spring_boot_version_less_than_2.3.0/: Dockerfile.template  entrypoint_script.template
devops_container_image_code_generator/templates/container_image_code/python/poetry/langserve/: Dockerfile.template
docs/: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml  style.css  theme.config.tsx  tsconfig.json
docs/pages/: _app.mdx  _meta.json  index.mdx
docs/pages/docs/: index.mdx
scripts/: entrypoint.sh
