[tool.poetry]
name = "devops-container-image-code-generator"
version = "1.20240626.4"
description = "Utilizes source code repository files, such as dependency manifests, to generate container image code like Dockerfile and entrypoint shell script using LangChain GenAI. "
authors = ["Sagar Velankar <sagar.velankar@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/devops-code-generators/devops-container-image-code-generator"
repository = "https://github.com/devops-code-generators/devops-container-image-code-generator"
documentation = "https://github.com/devops-code-generators/devops-container-image-code-generator"
keywords = ["devops", "container-image-code-generator", "devops-platform", "langchain", "genai"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
langchain-core = ">=0.1.5,<0.3"
langchain-openai = ">=0.0.1"
devops-code-generator = ">=1.0.0,<2.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
black = "^24.4.2"
pylint = "^3.2.3"

[tool.langserve]
export_module = "devops_container_image_code_generator.chain"
export_attr = "chain"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
